--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -36,8 +36,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-	  {% if logo %}
-          <a class="navbar-brand" href="/"><img width="160" height="30" src="{{ logo }}?version={{ version }}" ></a>
+	  {% if channel_logo %}
+          <a class="navbar-brand" href="/"><img width="160" height="30" src="{{ channel_logo }}?version={{ version }}" ></a>
 	  {% else %}
           <a class="navbar-brand" href="/"><img width="160" height="30" src="/static/images/logo-blue-transparent.png?version={{ version }}" ></a>
 	  {% endif %}
