--- a/static/css/pop_biom.css
+++ b/static/css/pop_biom.css
@@ -1,25 +1,21 @@
-.side-by-side {
-    display: inline-block;
-    float: none;
+/* For the CHANGES IN RISK section */
+.node rect {
+  cursor: move;
+  fill-opacity: .9;
+  shape-rendering: crispEdges;
 }
 
-.div-size {
-    width: 200px;
-    margin-right: 50px;
-    height: 200px;
-    background-color: rgba(0,0,0,0.1);
+.node text {
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff;
 }
 
-div.center {
-    text-align: center;
+.link {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: .2;
 }
 
-hr {
-    width: 900px;
-}
-
-.div-size-big {
-    width: 400px;
-    height: 400px;
-    background-color: rgba(0,0,0,0.1);
+.link:hover {
+  stroke-opacity: .5;
 }
