New Explore Population Page 	modified:   home/templates/pop_biom.html 	new file:   static/dimages/ExplorePop.png 	deleted:    static/dimages/ExplorePopNew.png

--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -74,7 +74,6 @@
       </div>
       <div id="my-tab-content" class="tab-content">
         <div class="tab-pane active" id="pi">
-        <h4>How has my population been impacted by health programs over time?</h4>
           <div class="center">
             <h4>POPULATION OVERVIEW</h4> 
             <p>Overall participation has increased <b>X%</b> in the last <b>3 years</b></p>
@@ -171,13 +170,11 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane" id="op">
-          <h2>Opportunities</h2>
-          <img src="static/dimages/HealthMetrics_Opportunities_v2.png?version={{ version }}">
+        <div class="tab-pane" id="op" style="text-align:center; display:block;" >
+          <img style="width: 800px;" src="static/dimages/HealthMetrics_Opportunities_v2.png?version={{ version }}">
         </div>
-        <div class="tab-pane" id="ep">
-          <h2>Explore Populations</h2>
-          <img src="static/dimages/ExplorePopNew.png?version={{ version }}" style="margin-left: 144px; width: 800px;">
+        <div class="tab-pane" id="ep" style="text-align:center; display:block;" >
+          <img style="width: 800px;" src="static/dimages/ExplorePop.png?version={{ version }}" >
         </div>
       </div>
     </div>
